# foot-view

./: .gitignore  README.md  app.py  package-lock.json  pyproject.toml
backend/: __init__.py  fall_detection.py  gait_analysis.py  pose_detection.py  processing.py
backend/models/: .gitkeep
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
instance/: footview.db
outputs/20251228233702_OAW01-top/: 20251228233702_OAW01-top_keypoints.csv
outputs/20251230205848_Hallway-4_2024-05-18_14-34-32/: 20251230205848_Hallway-4_2024-05-18_14-34-32_keypoints.csv
outputs/20251230235600_FirstfloorPassage1_2024-05-29_18-51-28/: 20251230235600_FirstfloorPassage1_2024-05-29_18-51-28_analysis.csv  20251230235600_FirstfloorPassage1_2024-05-29_18-51-28_keypoints.csv
outputs/20251231000249_Hallway-4_2024-05-18_14-34-32/: 20251231000249_Hallway-4_2024-05-18_14-34-32_analysis.csv
outputs/20251231004002_Hallway-8_2024-05-18_10-10-37/: 20251231004002_Hallway-8_2024-05-18_10-10-37_analysis.csv  20251231004002_Hallway-8_2024-05-18_10-10-37_keypoints.csv
outputs/20251231004028_hallway-7_2024-05-06_15-30-06/: 20251231004028_hallway-7_2024-05-06_15-30-06_analysis.csv  20251231004028_hallway-7_2024-05-06_15-30-06_keypoints.csv
outputs/20251231004124_FirstfloorPassage1_2024-05-07_16-17-15/: 20251231004124_FirstfloorPassage1_2024-05-07_16-17-15_analysis.csv  20251231004124_FirstfloorPassage1_2024-05-07_16-17-15_keypoints.csv
scripts/: test_model.py  test_video.py
training/: README.md  prepare_detection_dataset.py  train_detection.py
(+15 files in other folders)
