[project]
name = "foot-view"
version = "0.1.0"
description = "Gait Analysis System with Flask and Vue"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-login",
    "flask-mail",
    "werkzeug",
    "pandas",
    "numpy<2.0",
    "scipy",
    "opencv-python",
    "ultralytics"
]

[project.optional-dependencies]
dev = []
